[project]
name = "ximalayaalbumcatcher"
version = "0.2.0"
description = ""
authors = [
    {name = " ",email = " "}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.45.0,<5.0.0)",
    "webdriver-manager (>=4.1.2,<5.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
